First Comit from vs code

--- a/index.html
+++ b/index.html
@@ -194,26 +194,34 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section container contact-section">
-      <h2>Contact</h2>
-      <p class="muted">Open to internship opportunities — I respond within a few days.</p>
+  <!-- CONTACT -->
+  <section id="contact-section" class="section container">
+    <h2>Contact</h2>
+    <p class="contact-subtitle">Open to internship opportunities — feel free to reach out directly.</p>
 
-      <form id="contact-form" class="contact-form" novalidate>
-        <div class="form-grid">
-          <label>
-            <span>Full name</span>
-            <input type="text" name="name" required placeholder="Your name" />
-          </label>
-          <label>
-            <span>Email</span>
-            <input type="email" name="email" required placeholder="you@example.com" />
-          </label>
-          <label class="full">
-            <span>Message</span>
-            <textarea name="message" rows="5" required placeholder="Brief message / role you are hiring for"></textarea>
-          </label>
-        </div>
+    <div id="contact-details">
+      <div class="contact-card">
+        <strong>Email:</strong> 
+        <a href="mailto:your.email@example.com">your.email@example.com</a>
+      </div>
+      <div class="contact-card">
+        <strong>Phone:</strong> 
+        <a href="tel:+919876543210">+91 98765 43210</a>
+      </div>
+      <div class="contact-card">
+        <strong>LinkedIn:</strong> 
+        <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a>
+      </div>
+      <div class="contact-card">
+        <strong>GitHub:</strong> 
+        <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a>
+      </div>
+      <div class="contact-card">
+        <strong>Location:</strong> Hyderabad, India
+      </div>
+    </div>
+  </section>
+
 
         <div class="form-actions">
           <button class="btn" type="submit">Send message</button>
