Not the final commit, more work ahead

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <article class="project-card" tabindex="0"
                  data-title="Market Analysis and MVP Rollout Plan for a peer-to-peer bike rental platform"
                  data-desc="A structured analysis and rollout plan for launching a peer-to-peer bike rental platform, using both my project and project management knowledge"
-                 data-tags="Project Initiation, Planning, Execution and Closing."
+                 data-tags="Market Research, Competitive Analysis, MVP Definition, Go-to-Market Strategy"
                  data-link="https://www.notion.so/Market-Analysis-and-MVP-Rollout-Plan-Peer-to-Peer-Bike-Rental-Platform-26c975e0ff6b8094b60edb3b3d8c93b2?source=copy_link">
           <div class="project-media" id="p2" ></div>
           <div class="project-body">
